# master-thesis-uis

./: .gitignore  Notes.docx  README.md  new.py  setupConda.sh  spin-up-network.sh  spinUpJupyterhub.sh  spinUpNetwork.sh  workflow.yaml
Workflow for Distributed Data Sharing/: thesis.tex
extension/: examples for ref.txt  setup.sh
extension/thesis_extension/: .prettierignore  .test.txt  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  package-lock.json  package.json  pyproject.toml  setup.py  tsconfig.json
extension/thesis_extension/.github/workflows/: build.yml  check-release.yml
extension/thesis_extension/binder/: environment.yml
extension/thesis_extension/jupyter-config/server-config/: thesis_extension.json
extension/thesis_extension/src/: DataBlock.tsx  DataForm.tsx  RootComponent.tsx  icons.ts  index.ts  panel.ts  svg.d.ts
extension/thesis_extension/src/utils/: api.ts
extension/thesis_extension/style/: base.css
extension/thesis_extension/thesis_extension/: __init__.py  handlers.py
hyperledger-network/: .env  .gitignore  configtx.yaml  crypto-config.yaml  docker-compose.base.yml  docker-compose.ca.yml  docker-compose.network.yml  docker-compose.yml  down.sh  log.txt  setup.sh  start.network.sh  start.sh  up.sh
jupyterflow/: .gitignore  LICENSE  MANIFEST.in  mkdocs.yml  requirements.txt  setup.py
jupyterhub/: .dockerignore  Dockerfile  azure-mount.yaml  azure-pod.yaml  azure-pv.yaml  azure-pvc.yaml  azure-secret.yaml  azure-test.yaml  blockchain-service.yaml  buildJupyterhub.sh  config.yaml  dnsutils.yaml  github pat  ingress-argo.yaml  setup.sh  (+14 more)
(+147 files in other folders)
