[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["thesis_extension/labextension/static/style.js"]
ensured-targets = ["thesis_extension/labextension/static/style.js", "thesis_extension/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["thesis_extension/labextension/**", "yarn.lock", ".*", "package-lock.json"]
